<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="F_SAFETY_AnzeigenHohePrio" Id="{003bd5c4-83cf-4cd1-8fbf-5b9eac48c75d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SAFETY_AnzeigenHohePrio : BOOL (* Ehemals F_PNOZ_AnzeigenHohePrio() *)
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*    
	  U     "T 72"
      SPB   POK
*)
IF GVL.tonSAFETYok.Q THEN //(ehem. T72)
	RETURN;
END_IF


(*
      L     27  //PNOZ-Signal ungültig
      T     "DB6".w226_Betr_Anz_Wert
*)
DB6.w226_Betr_Anz_Wert := 127;

(*
      L     "DB6".w230
      L     24
      ==I   
      SPBN  a01
*)
IF (* DB6.w230 = 24 *) NOT IO.safeOutHauptLuft THEN
	(*
	 L    1                           //Druckluft nicht ein (weiter mit Masch-Ein)
	 T     "DB6".w226_Betr_Anz_Wert
	*)
	DB6.w226_Betr_Anz_Wert := 101;
END_IF
(*	  
a01:  BLD   130
      L     "DB6".w230
      L     48
      ==I   
      SPBN  a02
*)
IF (* DB6.w230 = 48 *) NOT IO.safeOutHauptLuft AND NOT IO.safeOutSchutzTueren THEN
	(*
	L     2   //Schutztür nicht zu
    T     "DB6".w226_Betr_Anz_Wert
	*)
	DB6.w226_Betr_Anz_Wert := 102;
END_IF
(*	  
      
a02:  BLD   130
      L     "DB6".w230
      L     68
      ==I   
      SPBN  a05
*)
IF (* DB6.w230 = 68 *) NOT IO.inResetNotHalt THEN
	(*
	L     5  //Kein Signal von Taste Maschine-Aus
    T     "DB6".w226_Betr_Anz_Wert
	*)
	DB6.w226_Betr_Anz_Wert := 105;
END_IF
(*	  
a05:  BLD   130
      L     "DB6".w230
      L     72
      ==I   
      SPBN  a08
*)
IF (* DB6.w230 = 72 *) NOT IO.safeOutHauptLuft AND NOT IO.safeOutNotHalt THEN
	(*
	 L     8                           //Not-Aus Steuerpult nicht OK     
     T     "DB6".w226_Betr_Anz_Wert
	*)
	DB6.w226_Betr_Anz_Wert := 108;
END_IF




(*	  
a08:  BLD   130
      U     "T 70"
      SPBN  a09
*)


//IF NOT GVL.tonPnozEntprell.Q THEN
//	RETURN;
//END_IF
(*
      L     9                           //Kein Signal von PNOZ
      T     "DB6".w226_Betr_Anz_Wert
*)
//DB6.w226_Betr_Anz_Wert := 109;
(*
a09:  BLD   130
POK:  BLD   130
*)]]></ST>
    </Implementation>
    <LineIds Name="F_SAFETY_AnzeigenHohePrio">
      <LineId Id="8" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="61" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="11" Count="2" />
      <LineId Id="65" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="14" Count="3" />
      <LineId Id="68" Count="1" />
      <LineId Id="72" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="70" Count="1" />
      <LineId Id="66" Count="0" />
      <LineId Id="20" Count="4" />
      <LineId Id="77" Count="0" />
      <LineId Id="81" Count="1" />
      <LineId Id="85" Count="2" />
      <LineId Id="83" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="27" Count="4" />
      <LineId Id="88" Count="0" />
      <LineId Id="93" Count="2" />
      <LineId Id="99" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="91" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="34" Count="4" />
      <LineId Id="100" Count="0" />
      <LineId Id="103" Count="2" />
      <LineId Id="109" Count="0" />
      <LineId Id="107" Count="1" />
      <LineId Id="102" Count="0" />
      <LineId Id="133" Count="2" />
      <LineId Id="132" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="41" Count="2" />
      <LineId Id="110" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="112" Count="2" />
      <LineId Id="111" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="115" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>